--- a/frontend/login.html
+++ b/frontend/login.html
@@ -24,7 +24,7 @@
             // Aquí puedes agregar cualquier lógica adicional de validación si es necesario
 
             // Redirige a index.html después del login
-            window.location.href = 'index.html';
+            window.location.href = 'index2.html';
         });
     </script>
 </body>
